# Lab_Problem1

./: CMakeLists.txt  ColorVector.txt  main.cpp  readme.MD
include/: Color.h  Picture.h
include/Exceptions/: ColorFileFormatException.h  ColorVectorOutOfRangeException.h  CoordinateOutOfRangeException.h  FileNotFoundException.h
src/: Color.cpp  Picture.cpp
src/Exceptions/: ColorFileFormatException.cpp  ColorVectorOutOfRangeException.cpp  CoordinateOutOfRangeException.cpp  FileNotFoundException.cpp
